Most of the SQL executor tests were fixed.